--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,4 +19,16 @@
         android:textSize="15pt"
         android:id="@+id/ButtonPlayStop"/>
 
+    <Button
+        android:layout_width="121dp"
+        android:layout_height="wrap_content"
+        android:text="Anterior"
+        android:id="@+id/btnAnterior" />
+
+    <Button
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="Proximo"
+        android:id="@+id/btnProximo" />
+
 </LinearLayout>
