Ajuste das musicas - ajuste do pausar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,4 +31,10 @@
         android:text="Proximo"
         android:id="@+id/btnProximo" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Parar"
+        android:id="@+id/btnParar" />
+
 </LinearLayout>
