--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -1,33 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
+    android:focusable="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context="player.fa7.edu.br.PomodorosActivity">
+    android:keepScreenOn="true">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_height="wrap_content"
+    <FrameLayout android:id="@+id/video_frame"
         android:layout_width="match_parent"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="match_parent"
+        android:layout_gravity="center">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <SurfaceView android:id="@+id/surface_view"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+            android:layout_height="match_parent"
+            android:layout_gravity="center"/>
 
-    </android.support.design.widget.AppBarLayout>
+        <View android:id="@+id/shutter"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/black"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/btnPlayList"
-        android:layout_width="wrap_content"
+        <com.google.android.exoplayer.text.SubtitleLayout android:id="@+id/subtitles"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:src="@drawable/play"
-        android:layout_margin="@dimen/activity_horizontal_margin"/>
+        android:background="#88000000"
+        android:orientation="vertical">
 
-</android.support.design.widget.CoordinatorLayout>
+        <LinearLayout android:id="@+id/controls_root"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <Button android:id="@+id/video_controls"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/video"
+                style="@style/DemoButton"
+                android:visibility="gone"
+                android:onClick="showVideoPopup"/>
+
+            <Button android:id="@+id/audio_controls"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/audio"
+                style="@style/DemoButton"
+                android:visibility="gone"
+                android:onClick="showAudioPopup"/>
+
+            <Button android:id="@+id/text_controls"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text"
+                style="@style/DemoButton"
+                android:visibility="gone"
+                android:onClick="showTextPopup"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+</FrameLayout>
